<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Comprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/Comprar"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Comprar">

        <RadioButton
            android:id="@+id/Vuelos"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Vuelos"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/Paquetes"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Paquetes"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/Hoteles"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Hoteles"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/Autos"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Autos"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/Seguros"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/Seguros"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/IdaVuelta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/IdaVuelta" />

        <RadioButton
            android:id="@+id/SolamenteIda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/SolamenteIda" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/Origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:drawableStart="@drawable/baseline_flight_takeoff_24"
            android:hint="@string/Origen"
            android:padding="10dp" />

        <EditText
            android:id="@+id/Destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:drawableStart="@drawable/baseline_flight_land_24"
            android:hint="@string/Destino"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border"
            android:drawableStart="@drawable/baseline_edit_calendar_24"
            android:hint="Fecha de ida"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border"
            android:drawableStart="@drawable/baseline_edit_calendar_24"
            android:hint="Fecha de vuelta"
            android:padding="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/TipoAsiento"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_border"
        android:drawableStart="@drawable/baseline_airline_seat_recline_extra_24"
        android:hint="@string/TipoAsiento"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <EditText
        android:id="@+id/CantPersonas"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_border"
        android:drawableEnd="@drawable/baseline_add_circle_outline_24"
        android:hint="@string/CantPersonas"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipoAsiento" />


    <CheckBox
        android:id="@+id/PuntosLATAMPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PuntosLATAMPass"
        app:layout_constraintStart_toStartOf="@+id/CantPersonas"
        app:layout_constraintTop_toBottomOf="@+id/CantPersonas" />

    <Button
        android:id="@+id/BtnVuelo"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EC134C"
        android:text="@string/BtnVuelo"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/CantPersonas"
        app:layout_constraintStart_toStartOf="@+id/CantPersonas"
        app:layout_constraintTop_toBottomOf="@+id/PuntosLATAMPass" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="#b2b9d4"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnVuelo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/whatsapp_logo_variant" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Compra vuelos con escala en São Paulo con nuestro asistente virtual."
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableRight="@drawable/baseline_arrow_outward_24"
            android:text="Abrir WhatsApp"
            android:textColor="#120A50"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Inicio"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Comprar"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Mis viajes"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Notificaciones"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="LATAM Pass"
            android:textSize="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>